# zig-wasi-components

./: .gitignore  README.md  build.zig  build.zig.zon
docs/: README.md  bindings.md  build-integration.md  cli.md  getting-started.md  limitations.md  resources.md  troubleshooting.md  wasi-module.md  wasi.md  workflow.md
examples/async-basic/: component.zig  world.wit
examples/async-basic/rust-host/: Cargo.toml
examples/async-basic/rust-host/src/: main.rs
examples/dual/: math.wit
examples/dual/host/: Cargo.toml
examples/dual/host/src/: main.rs
examples/dual/rust-impl/: Cargo.toml
examples/dual/rust-impl/src/: bindings.rs  lib.rs
examples/dual/rust-impl/wit/: world.wit
examples/dual/zig-impl/: component.zig
examples/greeter/: component.zig  greeter.wit
examples/greeter/rust-host/: Cargo.toml
examples/greeter/rust-host/src/: main.rs
examples/http-get/: README.md  component.zig
examples/http-get/wit/: world.wit
examples/resource/: component.zig  resource.wit
examples/resource/host/: Cargo.toml
examples/resource/host/src/: main.rs
examples/stream-demo/: README.md  component.zig  world.wit
examples/stream-demo/rust-host/: Cargo.toml
examples/stream-demo/rust-host/src/: main.rs
examples/wasi-demo/: component.zig
examples/wasi-demo-p3/: component.zig  http-check.zig
examples/wasi-demo-p3/wit/: cli.wit
examples/wasi-demo-p3/wit-http/: http.wit
examples/wasi-demo/wit/: deps  world.wit
src/: abi.zig  codegen.zig  main.zig  root.zig  wasi.zig  wasi3.zig  wasi_common.zig  wit.zig
